--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,81 @@
-<h1>burgers!</h1>
+{{!-- <nav class="navbar bg-dark">
+  <img src="images/" height="80" class="d-inline-block" align-top mx-auto>
+</nav>
+<div class="container my-5">
+  <div class="row">
+    <div class="col">
+      <div class="card">
+        <div class="card header text-center">
+          <h3> burgers</h3>
+        </div>
+        <div class="row">
+          {{#each burger}}
+          {{unless this.devours}}
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-9">
+                <pre>{{this.id}}. {{this.burger}}</pre>
+              </div>
+              <div class="col-md-3">
+                <form class="devour-form button-size">
+                  <input type="hidden" class="burger_id" type="text" value="{{this.id}}>
+                  <button type="submit class="btn btn-sm btn-outline-danger m-1 devour-btn float-right">Devour<i 
+                    class="fas fa-utensils ml-2"></i></button>
+                
+                </form>
 
-<h2>Hamburgers!</h2>
+            </div>
+          </div>
+        </div>
 
-<ul>
-  {{#each burger}}
+      </div>
+    </div>
+
+
+
+
+  </div> --}}
+
+
+
+
+
+
+  {{!-- <h1>burgers!</h1>
+
+<h2>Hamburgers!</h2> --}}
+
+  <ul>
+    {{#each burger}}
     {{#unless devours}}
-      {{> burger/burgers-block devours=true}}
+    {{> burger/burgers-block devours=true}}
     {{/unless}}
-  {{/each}}
-</ul>
+    {{/each}}
+  </ul>
 
-<h2>Devour!</h2>
+  <h2>Devour!</h2>
 
-<ul>
-  {{#each burger}}
+  <ul>
+    {{#each burger}}
     {{#if devours}}
-      {{> burger/burgers-block devours=false}}
+    {{> burger/burgers-block devours=false}}
     {{/if}}
-  {{/each}}
-</ul>
+    {{/each}}
+  </ul>
 
-<h2>Add a burger</h2>
-<form class="create-form">
+  <h2>Add a burger</h2>
+  <form class="create-form">
 
-  <div class="form-group">
-    <label for="ca">burger:</label>
-    <input type="text" id="ca" name="name">
-  </div>
+    <div class="form-group">
+      <label for="ca">burger:</label>
+      <input type="text" id="ca" name="name">
+    </div>
 
-  <div class="form-group">
-    <label for="devour">devour</label><br>
-    <input type="radio" name="devour" value="1" checked> devour!<br>
-    <input type="radio" name="devour" value="0"> Awake
-  </div>
+    <div class="form-group">
+      <label for="devour">devour</label><br>
+      <input type="radio" name="devour" value="1" checked> devour!<br>
+      {{!-- <input type="radio" name="devour" value="0"> Awake --}}
+    </div>
 
-  <button type="submit">Add burgers</button>
-</form>
+    <button type="submit">Add burgers</button>
+  </form>
