--- a/views/partials/burger/burgers-block.handlebars
+++ b/views/partials/burger/burgers-block.handlebars
@@ -2,7 +2,7 @@
 	{{name}}
 
 	<button class="change-devour" data-id="{{id}}" data-newdevour="{{devours}}">
-		{{#if devours}}devour{{else}}delete{{/if}}
+		{{#if devours}}devour{{else}}Devour{{/if}}
 	</button>
 
 	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
