--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17,3 +17,17 @@ li {
 .form-group {
   margin-bottom: 5px;
 }
+
+
+body {
+  background-color: rgb(137, 216, 197);
+}
+.centerme {
+  text-align: center;
+}
+h1, h2{
+  text-align: center;
+}
+ol {
+  text-align: center;
+}
