--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,49 +1,8 @@
-{{!-- <nav class="navbar bg-dark">
-  <img src="images/" height="80" class="d-inline-block" align-top mx-auto>
-</nav>
-<div class="container my-5">
-  <div class="row">
-    <div class="col">
-      <div class="card">
-        <div class="card header text-center">
-          <h3> burgers</h3>
-        </div>
-        <div class="row">
-          {{#each burger}}
-          {{unless this.devours}}
-          <div class="card-body">
-            <div class="row">
-              <div class="col-md-9">
-                <pre>{{this.id}}. {{this.burger}}</pre>
-              </div>
-              <div class="col-md-3">
-                <form class="devour-form button-size">
-                  <input type="hidden" class="burger_id" type="text" value="{{this.id}}>
-                  <button type="submit class="btn btn-sm btn-outline-danger m-1 devour-btn float-right">Devour<i 
-                    class="fas fa-utensils ml-2"></i></button>
-                
-                </form>
-
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
 
 
+  <h1>burgers!</h1>
 
-
-  </div> --}}
-
-
-
-
-
-
-  {{!-- <h1>burgers!</h1>
-
-<h2>Hamburgers!</h2> --}}
+<h2>Hamburgers!</h2>
 
   <ul>
     {{#each burger}}
