--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,16 @@
 
+<div class="row">
+  <div class="col-md-6">
+ <h2>Add a burger</h2>
+  <form class="create-form">
+
+    <div class="form-group">
+      <label for="ca">burger:</label>
+      <input type="text" id="ca" name="name">
+    </div>
+
+
+</div>
 
   <h1>burgers!</h1>
 
@@ -36,5 +48,5 @@
       {{!-- <input type="radio" name="devour" value="0"> Awake --}}
     </div>
 
-    <button type="submit">Add burgers</button>
+    <button type="submit" center="center">Add burgers</button>
   </form>
